--- a/Alchemy4Tridion.Plugins.Sample.HelloWorld/Alchemy4Tridion.Plugins.Sample.HelloWorld.csproj
+++ b/Alchemy4Tridion.Plugins.Sample.HelloWorld/Alchemy4Tridion.Plugins.Sample.HelloWorld.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>Alchemy4Tridion.Plugins.Sample.HelloWorld</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>b4648e94</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>8da02244</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,8 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Alchemy4Tridion.Plugins">
-      <HintPath>..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4\lib\net40\Alchemy4Tridion.Plugins.dll</HintPath>
+    <Reference Include="Alchemy4Tridion.Plugins, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4-2\lib\net40\Alchemy4Tridion.Plugins.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -57,8 +58,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tridion.ContentManager.CoreService.Client">
-      <HintPath>..\..\..\..\Projects\Content Bloom\Products\Alchemy4Tridion\Plugins\Dependencies\Assemblies\2013 SP1\Tridion.ContentManager.CoreService.Client.dll</HintPath>
+    <Reference Include="Tridion.ContentManager.CoreService.Client, Version=7.1.0.1290, Culture=neutral, PublicKeyToken=ddfc895746e5ee6b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4-2\lib\net40\Tridion.ContentManager.CoreService.Client.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -79,17 +81,18 @@
     <Content Include="Static\Controls\HelloGroup.ascx" />
     <Content Include="Static\Images\sample-small-icon.png" />
     <Content Include="Static\Scripts\ErrorTestCommand.js" />
+    <Content Include="Static\Scripts\HelloGuiCommand.js" />
     <Content Include="Static\Scripts\HelloWorldCommand.js" />
     <Content Include="Static\Scripts\GetApiVersionCommand.js" />
     <Content Include="Static\Styles\Hello.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4\build\net40\Alchemy4Tridion.Plugin.targets" Condition="Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4\build\net40\Alchemy4Tridion.Plugin.targets')" />
+  <Import Project="..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4-2\build\net40\Alchemy4Tridion.Plugin.targets" Condition="Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4-2\build\net40\Alchemy4Tridion.Plugin.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4\build\net40\Alchemy4Tridion.Plugin.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4\build\net40\Alchemy4Tridion.Plugin.targets'))" />
+    <Error Condition="!Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4-2\build\net40\Alchemy4Tridion.Plugin.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha4-2\build\net40\Alchemy4Tridion.Plugin.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
