--- a/Alchemy4Tridion.Plugins.Sample.HelloWorld/Alchemy4Tridion.Plugins.Sample.HelloWorld.csproj
+++ b/Alchemy4Tridion.Plugins.Sample.HelloWorld/Alchemy4Tridion.Plugins.Sample.HelloWorld.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>Alchemy4Tridion.Plugins.Sample.HelloWorld</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>ffa04746</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>5c57462e</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,9 +30,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <AlchemyRemoveBuildFiles>NonProjectAssembly</AlchemyRemoveBuildFiles>
+    <AlchemyUploadDialog>DEBUG|RELEASE</AlchemyUploadDialog>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Alchemy4Tridion.Plugins">
-      <HintPath>..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha5-0\lib\net40\Alchemy4Tridion.Plugins.dll</HintPath>
+      <HintPath>..\packages\Alchemy4Tridion.Plugin.1.0.0-beta6-1\lib\net40\Alchemy4Tridion.Plugins.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -58,17 +62,17 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Tridion.ContentManager.CoreService.Client">
-      <HintPath>..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha5-0\lib\net40\Tridion.ContentManager.CoreService.Client.dll</HintPath>
+      <HintPath>..\packages\Alchemy4Tridion.Plugin.1.0.0-beta6-1\lib\net40\Tridion.ContentManager.CoreService.Client.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AlchemyPlugin.cs" />
     <Compile Include="Config\HelloCommandSet.cs" />
     <Compile Include="Config\HelloContextMenu.cs" />
     <Compile Include="Config\HelloResourceGroup.cs" />
     <Compile Include="Config\HelloRibbonDropDown.cs" />
     <Compile Include="Controllers\ErrorTestBindingModel.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
+    <Compile Include="HelloWorldAlchemyPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -87,12 +91,12 @@
     <Content Include="Static\Styles\Hello.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha5-0\build\net40\Alchemy4Tridion.Plugin.targets" Condition="Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha5-0\build\net40\Alchemy4Tridion.Plugin.targets')" />
+  <Import Project="..\packages\Alchemy4Tridion.Plugin.1.0.0-beta6-1\build\net40\Alchemy4Tridion.Plugin.targets" Condition="Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-beta6-1\build\net40\Alchemy4Tridion.Plugin.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha5-0\build\net40\Alchemy4Tridion.Plugin.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Alchemy4Tridion.Plugin.1.0.0-alpha5-0\build\net40\Alchemy4Tridion.Plugin.targets'))" />
+    <Error Condition="!Exists('..\packages\Alchemy4Tridion.Plugin.1.0.0-beta6-1\build\net40\Alchemy4Tridion.Plugin.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Alchemy4Tridion.Plugin.1.0.0-beta6-1\build\net40\Alchemy4Tridion.Plugin.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
